# FiberWatch

./: .gitignore  Makefile  README.md  pyproject.toml
config/: default.json
fiberwatch/: __init__.py
fiberwatch/config/: __init__.py  detection.yaml  llm_config.py  settings.py
fiberwatch/core/: __init__.py  detector.py  models.py  simulation.py
fiberwatch/core/detection/: __init__.py  baseline.py  bend.py  context.py  dirty_connector.py  fiber_break.py  peaks.py  range_finder.py
fiberwatch/scripts/: __init__.py  analyze.py  cli.py  evaluate_dataset.py  visualize.py  visualize_with_llm.py
fiberwatch/utils/: __init__.py  data_io.py  evaluation.py  event_processing.py  llm_analyzer.py  visualization.py
fiberwatch/web/: __init__.py  app.py  ui_components.py
tests/: __init__.py  test_core.py
